# uba_ai_auto_generate_questionary_api

./: .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.railway  compose.yml  pyproject.toml  start.sh
docs/: .$ai_questionary_db.drawio.bkp  .$ai_questionary_db.drawio.dtmp  ai_questionary_db.drawio
scripts/: git_version.ps1
src/: __main__.py
src/configs/: configs.py  db_connection.py
src/controllers/: ai_anatomy_controller.py  auth_controller.py  question_answers_controller.py  users_controller.py
src/databases/scripts/: 1.0_generate_db.sql  2.0_generate_db.sql  drop_db.sql  generate_db.sql
src/databases/scripts/migrations/: railway_1.sql  railway_2_ai_upgrade.sql  railway_3_subtopic.sql
src/databases/scripts/seeders/: adm_user.sql  (+1 more)
src/helpers/: check_subtopic.py  permissions_list.py  questions_text.py
src/middleware/: check_permissions.py  jwt_middleware.py
src/models/: __init__.py  models.py
src/routers/: __init__.py  ai_anatomy_router.py  auth_router.py  question_answers_router.py  users_router.py
src/schemas/: __init__.py  ai_anatomy_schemas.py  auth_schema.py  institutions_schema.py  profile_schemas.py  questions_answers_schema.py  questions_schemas.py  user_institution_schema.py  users_schemas.py
src/services/: ai_anatomy_service.py  auth_service.py  institutions_service.py  profiles_service.py  question_answers_service.py  questions_service.py  user_institution_service.py  user_institutions_service.py
src/utils/: auth_cookie_context.py  auth_cookie_utils.py  constraints.py  db_institution_define.py  fernet_utils.py  jwt_utils.py
